option('openmp', type: 'feature', description: 'Build OpenMP support library')
option('threads', type: 'feature', description: 'Build thread support library')
option('combined_threads', type: 'feature', value: 'disabled', description: 'Merge thread library and main library')
option('mpi', type: 'feature', description: 'Build MPI support library')
option('sse2', type: 'feature', description: 'SSE/SSE2 optimization')
option('avx', type: 'feature', description: 'AVX optimization')
option('avx2', type: 'feature', description: 'AVX2 optimization')
option('avx512', type: 'feature', description: 'AVX512 optimization')
option('avx-128-fma', type: 'feature', description: '128-bit FMA AVX optimization')
option('prefer_fma', type: 'feature', description: 'Prefer fused-multiply-add instructions (preferred on some architectures)')
option('kcvi', type: 'feature', description: 'Knights Corner vector instructions optimization')
option('vsx', type: 'feature', description: 'IBM VSX optimization')
option('lsx', type: 'feature', description: 'LoongArch LSX optimization')
option('lasx', type: 'feature', description: 'LoongArch LASX optimization')
option('sve', type: 'feature', description: 'ARM SVE optimization')
option('neon', type: 'feature', description: 'ARM NEON optimization')
option('altivec', type: 'feature', description: 'Altivec optimization')
option('generic-simd128', type: 'feature', value: 'disabled', description: 'Generic (compiler-specific) 128-bit SIMD optimization')
option('generic-simd256', type: 'feature', value: 'disabled', description: 'Generic (compiler-specific) 256-bit SIMD optimization')
option('precision', type: 'combo', choices: ['single', 'double', 'long-double', 'quad'], value: 'double', description: 'floating-point precision')
option('generate_codelets', type: 'feature', description: 'Generate codelets from scratch (not recommended for users)')
option('docs', type: 'feature', description: 'Rebuild documentation')
option('random_estimator', type: 'boolean', value: false, description: 'Pseudo-random estimate planning (for debugging)')
option('fortran', type: 'boolean', description: 'Fortran-callable wrappers')
option('slow_timer', type: 'boolean', value: false, description: 'Use low-precision timers (SLOW)')
option('mips_zbus_timer', type: 'feature', value: 'disabled', description: 'Use MIPS ZBus cycle counter (check hardware support!)')
option('alloca', type: 'boolean')
option('our_malloc', type: 'feature', description: 'Use our aligned malloc (helpful for Windows)')
option('incoming_stack_boundary', type: 'integer', min: 0, value: 0, description: 'Assume the stack is aligned to (1<<X) bytes')
